--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,8 @@ github_username:  trackiss
 plugins:
   - jekyll-feed
 
+repository: "https://github.com/trackiss/trackiss.github.io"
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
